# rizzume

./: Dockerfile  Dockerfile.build  README.md  database.py  main.py  models.py  pyproject.toml  resumeFunction.py
.github/workflows/: build.yml  deploy.yml
README/: README.md  rizzume_heading.css
rizzume/: main.py  pyproject.toml
rizzume/templates/: docx_upload4AI.html  index.html
static/: ai.css
static/css/: job_search.css
templates/: docx_upload4AI.html  index.html  job_search.html  sample.html
tests/: test_ai.py  test_js.py
