[tool.poetry]
name = "rizzume"
version = "0.1.0"
description = ""
authors = ["author <author@email.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
groq = "^0.8.0"
python-docx = "^1.1.2"
beautifulsoup4 = "^4.12.3"
requests = "^2.32.3"
sqlalchemy = "^2.0.31"
httpx = "^0.27.0"
pytest-asyncio = "^0.23.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
